fixed some overlap on smaller screens

--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -109,8 +109,7 @@ h1 {
 
 @media screen and (max-width: 800px) {
     .home-intro {
-        /* font-size: 40px; 
-        padding-left: 40px; */
+        padding-top: 15px;
         font-size: 1em;
     }
 }
