--- a/src/components/styles/Technologies.css
+++ b/src/components/styles/Technologies.css
@@ -46,14 +46,27 @@
     margin-right: 20%;
 }
 
+@media screen and (max-width: 1300px) {
+    .tech {
+        padding: 0px 10px;
+    }
+}
+
+@media screen and (max-width: 1000px) {
+    .tech {
+        padding: 0px;
+    }
+}
+
 @media screen and (max-width: 600px) {
     .tech-container {
         flex-direction: column;
         align-items: center;
+        /* padding: 0px; */
     }
 
     .tech {
         width: 30%;
-        
+        padding: 0px, 10px;
     }
 }
